--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
 </head>
 
 <body class="board-app">
+  <!-- Header будет вставлен сюда автоматически через JS -->
+  
   <main class="board-app__main">
     <div class="board-app__inner">
-      <section class="add-task"></section>
-      <section class="taskboard"></section>
+      <section class="add-task"></section> <!-- Сюда вставится форма -->
+      <section class="taskboard"></section> <!-- Сюда вставится доска -->
     </div>
   </main>
+  
   <script src="src/main.js" type="module"></script>
 </body>
 </html>
